기능별 주석 추가